--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "kisara-backend",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "packageManager": "yarn@4.1.1",
   "scripts": {
-    "build": "npx prisma db push && npx prisma generate && tsc --skipLibCheck",
+    "build": "npx prisma db push && tsc --skipLibCheck && tsc-alias",
     "test": "tap --node-arg=--require=tsconfig-paths/register --allow-incomplete-coverage",
     "start": "cross-env NODE_ENV=production yarn build && node dist/index.js",
     "dev": "cross-env NODE_ENV=development ts-node-dev -r tsconfig-paths/register --transpile-only ./src/index.ts",
@@ -22,6 +22,7 @@
     "tap": "^18.7.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.4"
   },
