--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "fastify-socket.io": "^5.0.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "pino": "^8.20.0",
     "pino-pretty": "^11.0.0",
